<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/loginButton"
                    style="@style/loginButtonsStyle"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="112dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/blue__violet"
                    android:backgroundTint="#FFFFFF"
                    android:onClick="loginAction"
                    android:text="@string/Login"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

                <Button
                    android:id="@+id/signupButton"
                    style="@style/loginButtonsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="112dp"
                    android:layout_marginTop="4dp"
                    android:onClick="openUserSignupActivity"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/Signup"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginButton" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/EnterPassword"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:selectAllOnFocus="true"
                    android:text="Conditii101"
                    android:textSize="24sp"
                    app:layout_constraintStart_toEndOf="@+id/infoPasswordTextView"
                    app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

                <EditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="60dp"
                    android:hint="@string/EnterUsername"
                    android:inputType="textEmailAddress"
                    android:maxLength="15"
                    android:selectAllOnFocus="true"
                    android:text="SergeantDart"
                    android:textSize="24sp"
                    app:layout_constraintStart_toEndOf="@+id/infoUsernameTextView"
                    app:layout_constraintTop_toBottomOf="@+id/infoLoginTextView" />

                <TextView
                    android:id="@+id/infoUsernameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="76dp"
                    android:text="@string/LoginUsername"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoLoginTextView" />

                <TextView
                    android:id="@+id/infoPasswordTextView"
                    android:layout_width="112dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/LoginPassword"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoUsernameTextView" />

                <TextView
                    android:id="@+id/infoLoginTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/LoginIntoYourAccount"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lastLoginDateTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loggedInDateLabelTextView" />

                <TextView
                    android:id="@+id/loggedInDateLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:text="@string/LastLoggedInTimeStamp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signupButton" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>