<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#45FFFFFF"
    tools:context=".Activities.UserProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF9800"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/modifyProfileButton"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:backgroundTint="#5E5C54"
                android:text="@string/ProfileModifyButton"
                android:textSize="36sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

            <TextView
                android:id="@+id/profileFullNameLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="68dp"
                android:text="@string/ProfileFullNameLabel"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userPorfileInfoTextView" />

            <TextView
                android:id="@+id/userPorfileInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/WannaChangeYourProfile"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profileUsernameLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/ProfileUsernameLabel"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <TextView
                android:id="@+id/profilePasswordLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/ProfilePasswordLabel"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

            <TextView
                android:id="@+id/profileEmailLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/ProfileEmailLabel"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            <TextView
                android:id="@+id/profileTelephoneLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/ProfileTelephoneLabel"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="57dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/profileFullNameLabelTextView"
                app:layout_constraintTop_toBottomOf="@+id/userPorfileInfoTextView" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="7dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/profileUsernameLabelTextView"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="7dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintStart_toEndOf="@+id/profilePasswordLabelTextView"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="73dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toEndOf="@+id/profileEmailLabelTextView"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintStart_toEndOf="@+id/profileTelephoneLabelTextView"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

            <TextView
                android:id="@+id/profileShortBioLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="Short bio:"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toEndOf="@+id/profileShortBioLabelTextView"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

            <Button
                android:id="@+id/saveProfileButton"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:backgroundTint="#5E5C54"
                android:text="@string/ProfileSaveButton"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>